Bug 374971 - On Wayland previewing designs of tabbox doesn't clean them up afterwards
Summary: On Wayland previewing designs of tabbox doesn't clean them up afterwards
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwintabbox (other bugs)
Version First Reported In: 5.24.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
: 336734 404974 422942 432202 448906 457637 459858 481081 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-01-12 19:48 UTC by Roman Gilg
Modified: 2024-02-09 04:01 UTC (History)
19 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.93.0
Sentry Crash Report:


Attachments
I think I have this bug, just attached a video of what I'm having (3.15 MB, video/x-matroska)
2022-05-10 16:30 UTC, Dipta Biswas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Gilg 2017-01-12 19:48:02 UTC
In SySe clicking on preview of the default design shows it at the side. Clicking afterwards again shows it a second time and none of them vanish again (had to restart).
Comment 1 Martin Flöser 2017-01-12 20:00:04 UTC
Press "Escape"
Comment 2 Roman Gilg 2017-01-13 12:17:15 UTC
Click to focus stealing not supported on Wayland (had this problem with other context menus aswell)?
Comment 3 Alexander Mentyu 2018-09-19 13:05:25 UTC
If one opens Task Switcher KCM, clicks on for example Breeze preview two times, then presses Esc key also two times - firstly closes second opened Breeze preview, then Task Switcher KCM, only first opened Breeze preview stays and it cannot be closed with Esc key. In Alt+Tab menu it displays as single 'Systems Settings Window'

Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
Qt Version: 5.11.1
KDE Frameworks Version: 5.51.0
Kernel Version: 4.15.0-34-generic
OS Type: 64-bit
Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
Memory: 7,7 GiB of RAM
Comment 4 Patrick Silva 2019-02-28 19:24:20 UTC
Yesterday I noticed this problem...
Why can the preview of the same tabbox be activated several times?

Here, if I click on preview button twice while a window is maximized behind system settings, I can close the second preview by pressing ESC, but the first preview went to background and I need to minimize system settings to close it by presing ESC or clicking on the window that was behind system settings.
If none window was behind system settings, click on desktop wallpaper does not close the first preview and sometimes it also is not closed when I press ESC because it's not focused. So I need click it before press ESC. 

I think that the preview of the same tabbox should not be activated more than one time.

Operating System: Arch Linux 
KDE Plasma Version: 5.15.2
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1
Comment 5 Patrick Silva 2019-02-28 19:36:49 UTC
(In reply to Patrick Silva from comment #4)
> I think that the preview of the same tabbox should not be activated more
> than one time.

like on X11. :)
Comment 6 Vlad Zahorodnii 2019-03-05 15:38:05 UTC
If I understand correctly, the problem seems to be that LayoutPreview relies on pointer grab to dismiss itself.
Comment 7 Patrick Silva 2019-10-31 22:19:07 UTC
*** Bug 404974 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2020-10-12 21:47:18 UTC
*** Bug 422942 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2021-09-07 15:09:22 UTC
*** Bug 432202 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2021-09-07 15:09:59 UTC
*** Bug 336734 has been marked as a duplicate of this bug. ***
Comment 11 Patrick Silva 2022-01-21 17:23:35 UTC
*** Bug 448906 has been marked as a duplicate of this bug. ***
Comment 12 Dipta Biswas 2022-05-10 16:30:03 UTC
Created attachment 148711 [details]
I think I have this bug, just attached a video of what I'm having

Operating System: EndeavourOS
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Kernel Version: 5.17.5-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 2 × AMD E2-9000e RADEON R2, 4 COMPUTE CORES 2C+2G
Memory: 3.7 GiB of RAM
Graphics Processor: AMD STONEY
Comment 13 Andrea Ippolito 2022-05-17 09:18:49 UTC
Hello,

I'm facing the same issue.

Operating System: openSUSE Tumbleweed 20220513
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.2
Kernel Version: 5.17.5-1-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i7-1165G7 @ 2.80GHz
Memory: 15,4 GiB of RAM
Graphics Processor: Mesa Intel® Xe Graphics


Screen recording here (more high-res than OP's):
https://photos.app.goo.gl/csjNtdmP3Vfb4rtu6
Comment 14 Andrea Ippolito 2022-05-17 09:21:33 UTC
(In reply to andrea.ippo from comment #13)
> Hello,
> 
> I'm facing the same issue.
> 
> Operating System: openSUSE Tumbleweed 20220513
> KDE Plasma Version: 5.24.5
> KDE Frameworks Version: 5.93.0
> Qt Version: 5.15.2
> Kernel Version: 5.17.5-1-default (64-bit)
> Graphics Platform: Wayland
> Processors: 8 × 11th Gen Intel® Core™ i7-1165G7 @ 2.80GHz
> Memory: 15,4 GiB of RAM
> Graphics Processor: Mesa Intel® Xe Graphics
> 
> 
> Screen recording here (more high-res than OP's):
> https://photos.app.goo.gl/csjNtdmP3Vfb4rtu6

I had posted about this on r/kde but my post got removed by spam filters, go figure...

Anyway, I think that these preview windows should be dismissed as soon as they lose focus, would seem the most reasonable thing to do and what the user probably expects to happen.
Comment 15 Nicolas Fella 2022-08-08 18:57:13 UTC
*** Bug 457637 has been marked as a duplicate of this bug. ***
Comment 16 Patrick Silva 2022-09-30 15:51:05 UTC
*** Bug 459858 has been marked as a duplicate of this bug. ***
Comment 17 Doug 2024-01-08 23:09:45 UTC
This bug is still alive and well in Plasma 6 Beta 2:

Operating System: KDE Neon Unstable
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1
Comment 18 Bug Janitor Service 2024-01-12 22:04:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4907
Comment 19 Ismael Asensio 2024-01-12 22:25:23 UTC
Git commit b08a4a18963d0e691c4813e6254d7908398a3eae by Ismael Asensio.
Committed on 12/01/2024 at 23:10.
Pushed by iasensio into branch 'master'.

kcms/tabbox: Fix tabbox preview not getting dismissed

On X11 we would dismiss the tabbox preview when clicking outside
of the switcher. This doesn't work on Wayland because the popup
cannot globally grab the mouse and doesn't get notified.

Use `QEvent::FocusOut` instead which works on both platforms.

We also get rid of a warning message.
FIXED-IN: 5.93.0

M  +3    -8    src/kcms/tabbox/layoutpreview.cpp

https://invent.kde.org/plasma/kwin/-/commit/b08a4a18963d0e691c4813e6254d7908398a3eae
Comment 20 Ismael Asensio 2024-01-12 23:16:43 UTC
Git commit 0dd9f0a31fed41b9d790c211eb144e4ee1c9197f by Ismael Asensio.
Committed on 13/01/2024 at 00:07.
Pushed by iasensio into branch 'Plasma/6.0'.

kcms/tabbox: Fix tabbox preview not getting dismissed

On X11 we would dismiss the tabbox preview when clicking outside
of the switcher. This doesn't work on Wayland because the popup
cannot globally grab the mouse and doesn't get notified.

Use `QEvent::FocusOut` instead which works on both platforms.

We also get rid of a warning message.
FIXED-IN: 5.93.0


(cherry picked from commit b08a4a18963d0e691c4813e6254d7908398a3eae)

M  +3    -8    src/kcms/tabbox/layoutpreview.cpp

https://invent.kde.org/plasma/kwin/-/commit/0dd9f0a31fed41b9d790c211eb144e4ee1c9197f
Comment 21 Ismael Asensio 2024-01-14 02:15:11 UTC
*** Bug 459858 has been marked as a duplicate of this bug. ***
Comment 22 Patrick Silva 2024-02-09 04:01:24 UTC
*** Bug 481081 has been marked as a duplicate of this bug. ***