kcms/tabbox: Fix tabbox preview not getting dismissed

On X11 we would dismiss the tabbox preview when clicking outside
of the switcher. This doesn't work on Wayland because the popup
cannot globally grab the mouse and doesn't get notified.

Use `QEvent::FocusOut` instead which works on both platforms.

We also get rid of a warning message.

BUG: 374971
FIXED-IN: 5.93.0


(cherry picked from commit b08a4a18963d0e691c4813e6254d7908398a3eae)